// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
.c0 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<li
  className="c0"
>
  OK
</li>
`;

exports[`should match snapshot 2`] = `
.c1 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 .field .selection.dropdown {
  width: 50% !important;
}

.c0.c0.c0.c0.c0 .field.error {
  margin-bottom: 0;
}

.c0.c0.c0.c0.c0 label.inputLabel {
  width: 200px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

<li
  className="c0 c1"
>
  OK
</li>
`;
